# CamConnect

./: .git-message.txt  .gitignore  Android-prompt.md  ONVIF_README.md  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/outdu/camconnect/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gstreamer_android_player.cpp  gstreamer_android_player1.cpp  gstreamer_android_player_before_yolo_l.cpp  gstreamer_android_player_l.cpp  midas.cpp  midas.h  midas_far.cpp  midas_l.cpp  midas_l2.cpp  yolo.cpp  yolo.h  yolo_far.cpp  yolo_l.cpp
app/src/main/java/com/outdu/camconnect/: CamConnectApplication.kt  MainActivity.kt  OnvifClient.kt  SetupActivity.kt  SplashActivity.kt
app/src/main/java/com/outdu/camconnect/Viewmodels/: AiControlViewModel.kt  AppViewModel.kt  CameraLayoutViewModel.kt  CameraSettingsViewModel.kt  RecordViewModel.kt
app/src/main/java/com/outdu/camconnect/auth/: AuthenticationException.kt  SessionManager.kt
app/src/main/java/com/outdu/camconnect/communication/: Data.java  FTPUploader.java  MotoCamApiHelperWrapper.kt  MotocamAPIAndroidHelper.java  MotocamAPIAndroidHelper.kt  MotocamAPIHelper.java  MotocamAPIHelperWrapper.java  MotocamSocketClient.java  MotocamSocketClient.kt  MotocamSocketServer.java
app/src/main/java/com/outdu/camconnect/network/: HttpClientProvider.kt
app/src/main/java/com/outdu/camconnect/services/: NotificationHelper.kt  ScreenRecorderService.kt  ScreenRecordingService.kt
app/src/main/java/com/outdu/camconnect/singleton/: MainActivitySingleton.kt
app/src/main/java/com/outdu/camconnect/tflite/: CameraPreview.kt  PairLIEViewModel.kt  README.md  ZeroDCEScreen.kt  ZeroDCEViewModel.kt  tfliteScreen.kt
app/src/main/java/com/outdu/camconnect/ui/: README.md
app/src/main/java/com/outdu/camconnect/ui/auth/: AuthenticationState.kt  PinAuthDialog.kt
app/src/main/java/com/outdu/camconnect/ui/components/buttons/: CustomizableButton.kt  recordingButton.kt  zoomSelector.kt
app/src/main/java/com/outdu/camconnect/ui/components/camera/: CameraStreamView.kt
app/src/main/java/com/outdu/camconnect/ui/components/controls/: CameraControls.kt
app/src/main/java/com/outdu/camconnect/ui/components/indicators/: AiIcon.kt  CompassAndSpeed.kt  StatusIndicators.kt
app/src/main/java/com/outdu/camconnect/ui/components/login/: LoginComponents.kt  ViewerLoginCard.kt
app/src/main/java/com/outdu/camconnect/ui/components/recording/: CameraLayout.kt  RecordingTimer.kt
app/src/main/java/com/outdu/camconnect/ui/components/settings/: SettingsControls.kt
app/src/main/java/com/outdu/camconnect/ui/components/settings/ai/: AiLayout.kt
app/src/main/java/com/outdu/camconnect/ui/components/settings/camera/: CameraLayout.kt
app/src/main/java/com/outdu/camconnect/ui/components/settings/license/: CardComponents.kt  LicenseLayout.kt
app/src/main/java/com/outdu/camconnect/ui/components/settings/logout/: LogoutLayout.kt
app/src/main/java/com/outdu/camconnect/ui/layouts/: AdaptiveStreamLayout.kt  ContentComponents.kt  ExpandedControlLayout.kt  FullControlLayout.kt  MinimalControlLayout.kt
app/src/main/java/com/outdu/camconnect/ui/layouts/maps/: LiveTrackingMap.kt  MapLibreTrackingScreen.kt
app/src/main/java/com/outdu/camconnect/ui/layouts/streamer/: streamView.kt
app/src/main/java/com/outdu/camconnect/ui/modelLabels/: alertLabelsData.kt  boatModelData.kt  cocoModelData.kt
app/src/main/java/com/outdu/camconnect/ui/models/: CameraData.kt  LayoutState.kt  MapData.kt  RecordingState.kt
app/src/main/java/com/outdu/camconnect/ui/setupflow/: IntroPage.kt  SetupScreens.kt
app/src/main/java/com/outdu/camconnect/ui/theme/: Color.kt  ColorsDark.kt  ColorsLight.kt  README_THEMING.md  Theme.kt  ThemeColors.kt  Type.kt
app/src/main/java/com/outdu/camconnect/ui/viewmodels/: AiConfigurationViewModel.kt  CameraControlViewModel.kt  RecordingViewModel.kt
app/src/main/java/com/outdu/camconnect/utils/: AndroidScreenHelper.kt  ConfigurationMigrationHelper.kt  MapUtils.kt  MemoryManager.kt  screenRecorder.kt
app/src/main/java/com/outdu/camconnect/viewmodels/: SetupViewModel.kt
app/src/main/kotlin/com/outdu/camconnect/communication/: AndroidCameraController.kt  CameraApiManager.kt  CameraCommandProtocol.kt  CameraConfigurationManager.kt  CameraFileUploader.kt  CameraNotificationServer.kt  CameraSocketClient.kt  README.md
app/src/main/res/drawable/: ai_line.xml  bard_line.xml  battery_low_line.xml  batteryfull.xml  batterylow.xml  batterymedium.xml  camera_change_line.xml  camera_lens_line.xml  camera_line.xml  camera_skeleton.xml  earth_line.xml  expand_line.xml  eye.xml  eye_2_line.xml  eye_line.xml  eye_slash.xml  flip_horizontal_line.xml  flip_vertical_line.xml  git_commit_line.xml  hd_line.xml  hd_settings_line.xml  headlights.xml  ir_line.xml  ircut_filter_line.xml  key_right.xml  low_light.xml  moonstars.xml  night_logo.xml  no_line.xml  picture_in_picture_line.xml  polaroid_line.xml  record_circle_line.xml  record_icon.xml  record_rectangle.xml  router_line.xml  scout_logo.xml  settings_line.xml  signout.xml  sliders_horizontal.xml  spy_line.xml  (+14 more)
app/src/main/res/mipmap-anydpi-v26/: stravion_launcher_round.xml
app/src/main/res/raw/: intro_animation.json  scout_intro.json
app/src/main/res/values/: colors.xml  scout_launcher_background.xml  stravion_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/outdu/camconnect/: ExampleUnitTest.kt  OnvifClientTest.kt
docs/: COMPONENT_ARCHITECTURE.md  CONTROL_LAYOUT.md  HTTP_COMMUNICATION_ARCHITECTURE.md  IMMERSIVE_LAYOUT.md  MIGRATION_GUIDE.md  PIN_AUTHENTICATION_IMPLEMENTATION.md  README.md  SETTINGS_LAYOUT.md  STATE_MANAGEMENT_ARCHITECTURE.md  UI_LAYOUTS_DOCUMENTATION.md  custom_style.css
docs/images/: README.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
